# prebuilt-node-librealsense

./: CMakeLists.txt  README.md  binding.gyp  index.d.ts  package-lock.json  package.json
.github/workflows/: node.js.yml
realsense2/linux/: librealsense2.so.2.51
realsense2/win-x64/: realsense2.lib
src/: addon.cpp
